# cooldown-planner

./: .gitignore  Cargo.toml  check.sh  csr.sh  flake.nix  package-lock.json  package.json  ref_signal.rs  serve.sh  server.sh  ssr.sh  tailwind.config.js  tailwind.sh  tracing.rs  wasm_release_build.txt
auto-battle-net/: Cargo.toml
auto-battle-net/cache/: _data_wow_achievement-category_index.json  _data_wow_achievement-category_{achievementCategoryId}.json  _data_wow_achievement_index.json  _data_wow_achievement_{achievementId}.json  _data_wow_azerite-essence_index.json  _data_wow_azerite-essence_{azeriteEssenceId}.json  _data_wow_connected-realm_index.json  _data_wow_connected-realm_{connectedRealmId}.json  _data_wow_connected-realm_{connectedRealmId}_auctions.json  _data_wow_connected-realm_{connectedRealmId}_mythic-leaderboard_index.json  _data_wow_connected-realm_{connectedRealmId}_mythic-leaderboard_{dungeonId}_period_{period}.json  _data_wow_covenant_conduit_index.json  _data_wow_covenant_conduit_{conduitId}.json  _data_wow_covenant_index.json  _data_wow_covenant_soulbind_index.json  _data_wow_covenant_soulbind_{soulbindId}.json  _data_wow_covenant_{covenantId}.json  _data_wow_creature-family_index.json  _data_wow_creature-family_{creatureFamilyId}.json  _data_wow_creature-type_index.json  _data_wow_creature-type_{creatureTypeId}.json  _data_wow_creature_{creatureId}.json  _data_wow_guild-crest_index.json  _data_wow_guild_{realmSlug}_{nameSlug}.json  _data_wow_guild_{realmSlug}_{nameSlug}_achievements.json  _data_wow_guild_{realmSlug}_{nameSlug}_activity.json  _data_wow_guild_{realmSlug}_{nameSlug}_roster.json  _data_wow_heirloom_index.json  _data_wow_heirloom_{heirloomId}.json  _data_wow_item-class_index.json  _data_wow_item-class_{itemClassId}.json  _data_wow_item-class_{itemClassId}_item-subclass_{itemSubclassId}.json  _data_wow_item-set_index.json  _data_wow_item-set_{itemSetId}.json  _data_wow_item_{itemId}.json  _data_wow_journal-encounter_index.json  _data_wow_journal-encounter_{journalEncounterId}.json  _data_wow_journal-expansion_index.json  _data_wow_journal-expansion_{journalExpansionId}.json  _data_wow_journal-instance_index.json  (+138 more)
auto-battle-net/src/: access_token.rs  api.rs  clients.rs  error.rs  lib.rs  link.rs  locale.rs  localized_string.rs  namespace.rs  region.rs  reqwest_client.rs
auto-battle-net/src/oauth/user_authentication/: user_info.rs
fight-domain/: Cargo.toml
fight-domain/src/: attack.rs  attack_timer.rs  character.rs  identifier.rs  lib.rs  lookup.rs  serde_not_nan.rs  spell.rs  time_step.rs
i18n/: Cargo.toml
i18n/src/: lib.rs  locale.rs
optimizer/: Cargo.toml
optimizer/src/: assignment.rs  fight_model.rs  lib.rs  optimizer.rs  optimizers.rs  plan.rs  score_functions.rs
planner/: Cargo.toml
planner/src/: as_in_game_note.rs  fuzzy_search.rs  lib.rs  planner_assignments.rs  planner_character.rs  planner_fight.rs  planner_realm.rs  planner_state.rs  planner_user.rs
planner/src/specs/: death_knight.rs  demon_hunter.rs  druid_restoration.rs  evoker_preservation.rs  general.rs  mod.rs  monk_mistweaver.rs  paladin_holy.rs  priest_discipline.rs  priest_holy.rs  priest_shadow.rs  shaman_restoration.rs  warrior.rs
web/app/: Cargo.toml
web/app/src/: lib.rs  session.rs
web/app/src/api/: fuzzy_search.rs  icon_url.rs  mod.rs  plan_export.rs  ui_assignment.rs  ui_character.rs  ui_fight.rs  ui_spell.rs  ui_state.rs  use_optimizer.rs  write_to_clipboard.rs
web/app/src/components/: add_character_button.rs  mod.rs
web/app/src/context/: class_cache.rs  class_spec_index.rs  guild_roster.rs  mod.rs  planner.rs  planner_state.rs  region_realms.rs  ui_state.rs  user.rs  workers.rs
web/app/src/misc/: flatten_ok.rs  localized_string_with_context.rs  mod.rs
web/app/src/reactive/: async_ext.rs  blank_suspense.rs  local_resource.rs  map.rs  memo.rs  mod.rs  resource_ext.rs
web/app/src/serverfns/: battle_net_login_url.rs  character_avatar.rs  character_main_image.rs  character_summary.rs  classes_and_specs.rs  encounter_info.rs  guild_roster.rs  instance_info.rs  is_logged_in.rs  main_character.rs  mod.rs  realms_for_character.rs  region_realms.rs
web/app2/: Cargo.toml
web/app2/src/: lib.rs  session.rs
web/app2/src/api/: mod.rs  plan_export.rs  ui_character.rs  ui_fight.rs  ui_state.rs  use_optimizer.rs  write_to_clipboard.rs
web/app2/src/components/: mod.rs
web/app2/src/context/: class_cache.rs  class_spec_index.rs  guild_roster.rs  mod.rs  planner.rs  region_realms.rs  workers.rs
web/app2/src/misc/: hash_ext.rs  localized_string_with_context.rs  mod.rs
web/app2/src/reactive/: memo.rs  mod.rs
web/app2/src/serverfns/: battle_net_login_url.rs  character_avatar.rs  character_main_image.rs  character_summary.rs  classes_and_specs.rs  encounter_info.rs  guild_roster.rs  instance_info.rs  is_logged_in.rs  main_character.rs  realms_for_character.rs  region_realms.rs
web/battle-net-auth/: Cargo.toml
web/battle-net-auth/src/: axum.rs  lib.rs
web/front/: Cargo.toml
web/front-csr/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/front-csr/src/: main.rs
web/front/src/: lib.rs
web/optimize-worker/: Cargo.toml
web/optimize-worker/src/: lib.rs
web/paseto-sessions/: Cargo.toml
web/paseto-sessions/src/: lib.rs
web/server/: Cargo.toml
web/server/src/: fallback.rs  main.rs  reverse_proxy.rs
web/server/src/handlers/: battle_net_login_callback.rs  mod.rs  spell_icon.rs
web/server2/: Cargo.toml
web/server2/src/: fallback.rs  main.rs  reverse_proxy.rs
web/server2/src/handlers/: battle_net_login_callback.rs  icon.rs  spell_icon.rs
web/storage/: Cargo.toml
web/storage/migrations/: 20230706102320_create.sql
web/storage/src/: axum.rs  keyable.rs  lib.rs  sqlite.rs  store.rs
web/ui/: Cargo.toml
web/ui/src/: fuzzy_search.rs  lib.rs  planner.rs  planner_character.rs  planner_fight.rs  planner_state.rs
web/ui/src/fights/: mod.rs
web/ui/src/localization/: mod.rs
web/ui/src/specs/: death_knight.rs  demon_hunter.rs  druid_restoration.rs  evoker_preservation.rs  general.rs  mod.rs  monk_mistweaver.rs  (+6 more)
(+136 files in other folders)
