[workspace]
resolver = "2"
members = [
    "auto-battle-net",
    "fight-domain",
    "optimizer",
    "web/app",
    "web/battle-net-auth",
    "web/storage",
    "web/front",
    "web/optimize-worker",
    "web/paseto-sessions",
    "web/server",
]

[workspace.dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "v0.5.0-beta", features = ["tracing", "nightly"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "v0.5.0-beta", features = ["nightly"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "v0.5.0-beta", features = ["nightly"] }
leptos_dom = { git = "https://github.com/leptos-rs/leptos", rev = "v0.5.0-beta", features = ["nightly"] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", rev = "v0.5.0-beta" }
#leptos_query = { git = "https://github.com/nicoburniske/leptos_query", branch = "v0.5.0_leptos" }
wasm-bindgen = "=0.2.87"

[[workspace.metadata.leptos]]
name = "cooldown-planner"
bin-package = "server-package"
lib-package = "front-package"
assets-dir = "web/assets"
style-file = "web/css/output.css"
#tailwind-input-file = "web/css/input.css"
site-root = "target/site/cooldown-planner"
lib-features = ["hydrate"]
#bin-features = ["ssr"]

[profile.dev.build-override]
opt-level = 3