[workspace]
resolver = "2"
members = [
    "auto-battle-net",
    "fight-domain",
    "optimizer",
    "web/app",
    "web/battle-net-auth",
    "web/front",
    "web/optimize-worker",
    "web/paseto-sessions",
    "web/server",
    "web/storage",
    "web/ui",
]

[workspace.dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5", features = ["tracing", "nightly"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5", features = [] }
leptos_dom = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5", features = [] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5" }
server_fn = { git = "https://github.com/leptos-rs/leptos", rev = "6b82a63b1d64762a9920135f598e864bfbf7e5b5", features = ["cbor"] }
#leptos_query = { git = "https://github.com/nicoburniske/leptos_query", rev = "f34b9915c4dbda5ec871a60e6ea943283cad179a.0_leptos" }
wasm-bindgen = "0.2"

[[workspace.metadata.leptos]]
name = "cooldown-planner"
bin-package = "server-package"
lib-package = "front-package"
assets-dir = "web/assets"
style-file = "web/css/output.css"
#tailwind-input-file = "web/css/input.css"
site-root = "target/site/cooldown-planner"
lib-features = ["hydrate"]
#bin-features = ["ssr"]

[profile.dev.build-override]
opt-level = 3
