[workspace]
resolver = "2"
members = [
    "auto-battle-net",
    "fight-domain",
    "i18n",
    "optimizer",
    "planner",
    "web/app",
    "web/battle-net-auth",
    "web/front",
    "web/front-csr",
    "web/optimize-worker",
    "web/paseto-sessions",
    "web/server",
    "web/storage",
    "web/ui",
]

[workspace.dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1", features = ["tracing", "nightly"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1", features = [] }
leptos_dom = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1", features = [] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1" }
server_fn = { git = "https://github.com/leptos-rs/leptos", rev = "8515589e27130f470753c78270d3982c0c363be1", features = ["cbor"] }
#leptos_query = { git = "https://github.com/nicoburniske/leptos_query", rev = "f34b9915c4dbda5ec871a60e6ea943283cad179a.0_leptos" }

async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
axum-macros = "0.4"
base64 = "0.22"
borrowme = "0.0.15"
bytes = "1.6"
cached = "0.51"
cfg-if = "1.0"
console_error_panic_hook = "0.1"
convert_case = "0.6"
cookie = "0.18"
deunicode = "1.3"
dotenvy = "0.15"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
genetic_algorithm = "0.7"
genevo = "0.7"
gloo-timers = "0.3"
governor = "0.6"
html2md = "0.2"
http = "1"
hyper = "1"
hyper-tls = "0.6"
indexmap = "2.2"
insta = "1.39"
itertools = "0.13"
js-sys = "0.3"
lambda-web = "0.2"
lazy_static = "1.4"
localsearch = "0.12.1"
log = "0.4"
nanoid = "0.4"
num-traits = "0.2"
oauth2 = "4.3"
ordered-float = "4.2"
pasetors = "0.6"
rand = "0.8"
redact = "0.1.4"
reqwest = "0.12"
serde = "1.0"
serde-lite = "0.5"
serde-lite-derive = "0.5"
serde_json = "1.0"
serde_with = "3.0"
sqlx = { version = "0.7", default-features = false }
strsim = "0.11"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = "1.37"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
url = "2.3"
urlencoding = "2.1"
uuid = "1.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[[workspace.metadata.leptos]]
name = "cooldown-planner"
bin-package = "server-package"
lib-package = "front-package"
assets-dir = "web/assets"
style-file = "web/css/output.css"
#tailwind-input-file = "web/css/input.css"
site-root = "target/site/cooldown-planner"
lib-features = ["hydrate"]
#bin-features = ["ssr"]
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.app-package]
opt-level = 1

[profile.dev.package.front-package]
opt-level = 1

[profile.dev.package.server-package]
opt-level = 1
