[package]
name = "fight-domain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.6.0"
serde = { version = "1.0.159", features = ["derive", "rc", "alloc"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }