[package]
name = "fight-domain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.2", features = ["serde"] }
ordered-float = "4.2"
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
