[package]
name = "fight-domain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive", "rc", "alloc"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
