[package]
name = "i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde-lite = { workspace = true }
serde-lite-derive = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
