[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fight-domain = { path = "../fight-domain" }

dogs = "1.3"
genetic_algorithm = "0.6"
genevo = "0.7"
localsearch = "0.9"
num-traits = "0.2"
ordered-float = "3.6"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
