[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-battle-net = { path = "../auto-battle-net", features = ["game_data-journal-journal_encounter", "game_data-journal-journal_instance"] }
fight-domain = { path = "../fight-domain" }
i18n = { path = "../i18n" }
optimizer = { path = "../optimizer", default-features = false }

deunicode = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
strsim = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true }
log = "0.4.21"

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
