[package]
name = "app-package"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hydrate"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    #"leptos_query/hydrate"
]
ssr = [
    "auto-battle-net/reqwest",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    #"leptos_query/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:paseto-sessions",
    "dep:pasetors",
    "dep:storage"
]

[dependencies]
auto-battle-net = { path = "../../auto-battle-net" }
fight-domain = { path = "../../fight-domain" }
optimize-worker = { path = "../optimize-worker" }
optimizer = { path = "../../optimizer" }
paseto-sessions = { path = "../paseto-sessions", optional = true }
storage = { path = "../storage", optional = true }
leptos_workers = { path = "../../../leptos_workers/leptos_workers" }

async-trait = "0.1"
axum = { version = "0.6", optional = true }
base64 = "0.21"
borrowme = "0.0"
bytes = { version = "1.4", features = ["serde"] }
cfg-if = "1.0"
convert_case = "0.6"
cookie = { version = "0.17" }
deunicode = "1.3"
futures-util = "0.3"
futures-channel = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
http = "0.2"
js-sys = "0.3"
itertools = "0.11"
leptos = { workspace = true, features = ["serde"] }
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use = { path = "../../../leptos-use" }
#leptos_query.workspace = true
num-traits = "0.2"
oauth2 = "4.3"
ordered-float = "3.6.0"
pasetors = { version = "0.6", features = ["paserk"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0" }
serde-lite = { version = "0.4" }
serde-lite-derive = { version = "0.4" }
strsim = "0.10"
strum = "0.25"
thiserror = "1.0"
tracing = "0.1"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "console",
    "HtmlElement",
    "KeyboardEvent",
    "Navigator",
    "Node",
    "Url",
    "Window",
]
