[package]
name = "battle-net-auth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.6", optional = true }
cached = { version = "0.44" }
redact = { version = "0.1.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }