[package]
name = "battle-net-auth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]

[dependencies]
auto-battle-net = { path = "../../auto-battle-net" }

axum = { workspace = true, optional = true }
cached = { workspace = true, features = ["async"] }
redact = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "blocking", "stream"] }
serde = { workspace = true, features = ["derive", "rc", "alloc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
