[package]
name = "csr-package"
version = "0.1.0"
edition = "2021"

[dependencies]
app-package = { path = "../app", default-features = false, features = ["render"] }

leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

console_error_panic_hook = { workspace = true }
gloo-net = { version = "0.5", features = ["http"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
url = { workspace = true }
web-sys = { workspace = true }