[package]
name = "front-package"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate"]

[dependencies]
app-package = { path = "../app" }

#console_log = "1.0"
console_error_panic_hook = "0.1"
leptos = { workspace = true, features = ["serde", "hydrate"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Window"] }