[package]
name = "front-package"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate"]

[dependencies]
app-package = { path = "../app" }

#console_log = "1.0"
console_error_panic_hook = { workspace = true }
leptos = { workspace = true, features = ["hydrate"] }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }
