[package]
name = "optimize-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
fight-domain = { path = "../../fight-domain" }
optimizer = { path = "../../optimizer" }
leptos_workers = { path = "../../../leptos_workers/leptos_workers" }

futures = { workspace = true }
localsearch = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true }
