[package]
name = "paseto-sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
cookie = "0.17"
http = "0.2"
pasetors = { version = "0.6", features = ["paserk"] }
serde = { version = "1.0", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0" }
tracing = "0.1.37"