[package]
name = "paseto-sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
cookie = { workspace = true }
http = { workspace = true }
pasetors = { workspace = true, features = ["paserk"] }
serde = { workspace = true, features = ["derive", "rc", "alloc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
