[package]
name = "storage"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
sqlite = [
    "dep:sqlx"
]


[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.28"
tracing = { version = "0.1" }

axum = { version = "0.7", optional = true }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-native-tls", "macros", "migrate", "sqlite"
], optional = true }
