[package]
name = "storage"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
sqlite = [
    "dep:sqlx"
]


[dependencies]
async-trait = { workspace = true }
key-mutex = { version = "0.1", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "macros", "migrate", "sqlite"], optional = true }
