[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-battle-net = { path = "../../auto-battle-net" }
fight-domain = { path = "../../fight-domain" }
optimizer = { path = "../../optimizer" }

deunicode = "1.0"
itertools = "0.13"
num-traits = "0.2"
ordered-float = "4.2"
strsim = "0.11"
serde = { version = "1.0", features = ["derive"] }